--- a/app/src/main/res/layout/batch_form_fragment.xml
+++ b/app/src/main/res/layout/batch_form_fragment.xml
@@ -213,18 +213,18 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="0dp"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1">
 
                     <android.support.design.widget.TextInputEditText
                         android:id="@+id/outputVolumeAmount"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:hint="Output Volume"
                         android:inputType="numberDecimal"
                         android:maxLines="1" />
@@ -232,7 +232,7 @@
                 </android.support.design.widget.TextInputLayout>
 
                 <Spinner
-                    android:id="@+id/output_volume_units"
+                    android:id="@+id/outputVolumeAmountUnit"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:entries="@array/volume_units_list" />
