--- a/app/src/main/res/values/units_lists.xml
+++ b/app/src/main/res/values/units_lists.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2017 Full Mead Alchemist, LLC.
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
@@ -16,29 +15,25 @@
   -->
 
 <resources>
-    <string-array
-        name="mass_units_list">
-        <item>@string/Kilogram</item>
-        <item>@string/Gram</item>
-        <item>@string/Pound</item>
-        <item>@string/Dry_Ounce_US</item>
+    <string-array name="mass_units_list">
+        <item>@string/KILOGRAM</item>
+        <item>@string/GRAM</item>
+        <item>@string/POUND</item>
+        <item>@string/OUNCE</item>
     </string-array>
-    <string-array
-        name="volume_units_list">
-        <item>@string/Liter</item>
-        <item>@string/Gallon_US</item>
-        <item>@string/Pint_US</item>
-        <item>@string/Cup_US</item>
-        <item>@string/Fl_Ounce_US</item>
+    <string-array name="volume_units_list">
+        <item>@string/LITER</item>
+        <item>@string/OUNCE_LIQUID_US</item>
+        <item>@string/GALLON_LIQUID_US</item>
+        <item>@string/OUNCE_LIQUID_UK</item>
+        <item>@string/GALLON_LIQUID_UK</item>
     </string-array>
-    <string-array
-        name="sugar_units_list">
-        <item>@string/Kilogram</item>
-        <item>@string/Gram</item>
-        <item>@string/Liter</item>
-        <item>@string/Gallon_US</item>
-        <item>@string/Pound</item>
-        <item>@string/Cup_US</item>
-        <item>@string/Fl_Ounce_US</item>
+    <string-array name="sugar_units_list">
+        <item>@string/KILOGRAM</item>
+        <item>@string/GRAM</item>
+        <item>@string/LITER</item>
+        <item>@string/GALLON_LIQUID_US</item>
+        <item>@string/OUNCE_LIQUID_US</item>
+        <item>@string/POUND</item>
     </string-array>
 </resources>
